# aiss4

./: .gitignore  CMakeLists.txt  README.md
src/: bwt.hpp  sais.hpp  sais_basic.hpp  tester.hpp
tests/: test1.cpp  test2.cpp  test3.cpp.in  test4.cpp.in  test5.cpp.in  test6.cpp.in
